...
android:paddingTop="@dimen/activity_vertical_margin">

<EditText
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:inputType="text"
    android:id="@+id/searchEditText"
    android:drawableRight="@drawable/abc_ic_search_api_mtrl_alpha"
    android:background="#ff090909"
    android:textColor="#ffffffff"
    android:textSize="40dp"/>

    <LinearLayout
...
            android:textSize="25dp"
            android:layout_weight="0.12" />

        <ImageButton
            android:layout_width="100dp"
            android:layout_height="33dp"
            android:id="@+id/bOrdenate"
            android:src="@drawable/arrow_down_float" />
    </LinearLayout>

    <ListView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@android:id/list">
</ListView>
</LinearLayout>
