...
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageButton
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:id="@+id/button_averageExceded"
        android:layout_marginTop="20dp"
        android:layout_gravity="right|center_vertical"
        android:background="@layout/on_selector_rank_avg"
        android:layout_below="@+id/textViewTickets"
        android:layout_centerHorizontal="true"
        android:adjustViewBounds="true" />

    <ImageButton
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:id="@+id/button_maximumVelocity"
        android:layout_gravity="center"
        android:background="@layout/on_selector_rank_max"
        android:adjustViewBounds="true"
        android:layout_below="@+id/textViewTitleTypeRank"
        android:layout_alignLeft="@+id/button_totalTickets"
        android:layout_alignStart="@+id/button_totalTickets" />

    <ImageButton
        android:layout_width="110dp"
        android:layout_height="90dp"
        android:id="@+id/button_totalTickets"
...
