...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rank_or_list">
        <ImageButton
            android:layout_width="101dp"
            android:layout_height="101dp"
            android:id="@+id/bList"
            android:layout_gravity="center"
            android:background="@layout/on_selector_list"
            android:layout_row="11"
            android:layout_column="1"
            android:layout_centerVertical="true"
            android:layout_alignRight="@+id/textView9"
            android:layout_alignEnd="@+id/textView9"
            android:adjustViewBounds="true" />

        <ImageButton
            android:layout_width="101dp"
            android:layout_height="101dp"
            android:id="@+id/bRank"
            android:layout_gravity="right|top"
            android:background="@layout/on_selector_rank"
            android:layout_row="15"
            android:layout_column="0"
            android:layout_alignTop="@+id/bList"
            android:layout_alignLeft="@+id/textView9"
...
